force-app/main/default/objects/ReportConfigurationInformation__c/ReportConfigurationInformation__c.object-meta.xml
<CustomObject>
    <label>Report Configuration Information</label>
    <nameField>
        <label>Report Configuration Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Configuration Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>