force-app/main/default/objects/ReportConfigurationInformation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Configuration Information</relationshipLabel>
    <relationshipName>Report_Configuration_Information</relationshipName>
    <type>Lookup</type>
</CustomField>