force-app/main/default/objects/ReportConfigurationInformation__c/fields/FirstDayOfCreateMonthlyReport__c.field-meta.xml
<CustomField>
    <fullName>FirstDayOfCreateMonthlyReport__c</fullName>
    <defaultValue>1</defaultValue>
    <label>First Day Of Create Monthly Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>