force-app/main/default/objects/ReportConfigurationInformation__c/fields/FirstDayOfReminderMonthlyReport__c.field-meta.xml
<CustomField>
    <fullName>FirstDayOfReminderMonthlyReport__c</fullName>
    <defaultValue>1</defaultValue>
    <label>First Day Of Reminder Monthly Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>