force-app/main/default/objects/ReportConfigurationInformation__c/fields/FirstDayOfReminderWeeklyReport__c.field-meta.xml
<CustomField>
    <fullName>FirstDayOfReminderWeeklyReport__c</fullName>
    <label>First Day Of Reminder Weekly Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week</valueSetName>
    </valueSet>
</CustomField>