force-app/main/default/objects/ReportConfigurationInformation__c/fields/FirstDayOfWeeklyReport__c.field-meta.xml
<CustomField>
    <fullName>FirstDayOfWeeklyReport__c</fullName>
    <defaultValue>TEXT(1)</defaultValue>
    <label>First Day Of Weekly Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week</valueSetName>
    </valueSet>
</CustomField>