force-app/main/default/objects/ReportConfigurationInformation__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <label>Mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>