force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/ChileMonthlyReport.recordType-meta.xml
<RecordType>
    <fullName>ChileMonthlyReport</fullName>
    <active>true</active>
    <label>Chile Monthly Report</label>
</RecordType>