force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/ChileWeeklyReport.recordType-meta.xml
<RecordType>
    <fullName>ChileWeeklyReport</fullName>
    <active>true</active>
    <label>Chile Weekly Report</label>
</RecordType>