force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/IndonesiaMonthlyReport.recordType-meta.xml
<RecordType>
    <fullName>IndonesiaMonthlyReport</fullName>
    <active>true</active>
    <label>Indonesia Monthly Report</label>
</RecordType>