force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/IndonesiaWeeklyReport.recordType-meta.xml
<RecordType>
    <fullName>IndonesiaWeeklyReport</fullName>
    <active>true</active>
    <label>Indonesia Weekly Report</label>
</RecordType>