force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Peru_Monthly_Report.recordType-meta.xml
<RecordType>
    <fullName>Peru_Monthly_Report</fullName>
    <active>true</active>
    <label>Peru Monthly Report</label>
</RecordType>