force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Peru_Weekly_Report.recordType-meta.xml
<RecordType>
    <fullName>Peru_Weekly_Report</fullName>
    <active>true</active>
    <label>Peru Weekly Report</label>
</RecordType>