force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Philippines_Monthly_Report.recordType-meta.xml
<RecordType>
    <fullName>Philippines_Monthly_Report</fullName>
    <active>true</active>
    <label>Philippines Monthly Report</label>
</RecordType>