force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Philippines_Weekly_Report.recordType-meta.xml
<RecordType>
    <fullName>Philippines_Weekly_Report</fullName>
    <active>true</active>
    <label>Philippines Weekly Report</label>
</RecordType>