force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Singapore_Monthly_Report.recordType-meta.xml
<RecordType>
    <fullName>Singapore_Monthly_Report</fullName>
    <active>true</active>
    <label>Singapore Monthly Report</label>
</RecordType>