force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/Singapore_Weekly_Report.recordType-meta.xml
<RecordType>
    <fullName>Singapore_Weekly_Report</fullName>
    <active>true</active>
    <label>Singapore Weekly Report</label>
</RecordType>