force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/SouthAfricaMonthlyReport.recordType-meta.xml
<RecordType>
    <fullName>SouthAfricaMonthlyReport</fullName>
    <active>true</active>
    <label>South Africa Monthly Report</label>
</RecordType>