force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/SouthAfricaWeeklyReport.recordType-meta.xml
<RecordType>
    <fullName>SouthAfricaWeeklyReport</fullName>
    <active>true</active>
    <label>South Africa Weekly Report</label>
</RecordType>