force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/VietnamMonthlyReport.recordType-meta.xml
<RecordType>
    <fullName>VietnamMonthlyReport</fullName>
    <active>true</active>
    <label>Vietnam Monthly Report</label>
</RecordType>