force-app/main/default/objects/ReportConfigurationInformation__c/recordTypes/VietnamWeeklyReport.recordType-meta.xml
<RecordType>
    <fullName>VietnamWeeklyReport</fullName>
    <active>true</active>
    <label>Vietnam Weekly Report</label>
</RecordType>