force-app/main/default/objects/ReportConfigurationInformation__c/validationRules/Monthly_Day_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Day_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CONTAINS( RecordType.Name , &apos;Monthly Report&apos; ) ,
NOT( AND( 
(( FirstDayOfCreateMonthlyReport__c &gt; 0 ) &amp;&amp; (FirstDayOfCreateMonthlyReport__c &lt;= 28 )) ,
(( FirstDayOfReminderMonthlyReport__c &gt; 0) &amp;&amp; (FirstDayOfReminderMonthlyReport__c &lt;= 28 )) )), 
false)</errorConditionFormula>
    <errorMessage>Date is out of range, please refill it.</errorMessage>
</ValidationRule>