force-app/main/default/objects/ReportConfigurationInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SalesRegion__c</columns>
    <columns>Customer__c</columns>
    <columns>FirstDayOfWeeklyReport__c</columns>
    <columns>Units__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>